[gd_scene load_steps=2 format=3 uid="uid://bpqfm8x4y5qhc"]

[ext_resource type="Script" path="res://MainMenu/scripts/MainMenu.gd" id="1_mainmenu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_mainmenu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Card Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Game"

[node name="CardAlbumButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Card Album"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
